updates to copy functionality and modal settings

--- a/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
+++ b/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
@@ -115,9 +115,20 @@ $count = 1;
 
     function copyFeatures(vals)
     {
+        jQuery('#features_table > tbody').empty();
         $q.each(vals, function(i, v) {
-        addFeature(i,v);
-    });
+            $q.each(v, function(ii, vv) {
+                if (ii == 'name') {
+                    vals['c'] = vv;
+                }
+                if (ii == 'desc') {
+                    vals['v'] = vv;
+                }
+            })
+            if (typeof(vals['c']) != "undefined" && vals['c'] !== null) {
+                addFeature(vals['c'], vals['v']);
+            }
+        });
         initMce();
     }
 
