Auto expands sections that are copied

--- a/app/code/Gradus/Catalog/view/adminhtml/templates/catalog/product/copydata.phtml
+++ b/app/code/Gradus/Catalog/view/adminhtml/templates/catalog/product/copydata.phtml
@@ -19,8 +19,9 @@
             <option value="compatibility">Compatibility</option>
             <option values="downloads">Downloadable Files</option>
         </select>
-        <button type="button" class="action-secondary" onclick="runCopy()" style="display:inline-block; float:right;">Copy fields</button>
-        <div  style="display:none;">
+        <div style="clear:both"></div>
+        <button type="button" class="action-secondary" onclick="runCopy()" style="display:inline-block;">Copy fields</button>
+        <div style="display:none;">
             <input id="searchPicked" />
         </div>
         <br>
